k8s-templates/virtualservice-base.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs
spec:
  gateways:
  - istio-system/default-gateway
  hosts:
  - placeholder.proxmox.homelab
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: application.default.svc.cluster.local
        port:
          number: 3000
